<resources>
    <string name="app_name">My City Guide Application</string>
    <string name="Hi_Please_Login">Hi,Please Login</string>
    <string name="login"> Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Create Account</string>
    <string name="register1">Register</string>
    <string name="click_to_login">Already User</string>
    <string name="click_to_register">New User?</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="communication">Communication</string>
    <string name="setting">Setting</string>
    <string name="rate_us">Rate Us</string>
    <string name="my_map_api_key">AIzaSyDWTNDLpaSFwxC6_u-0iXUaWQ-EkvN01C8</string>
    <string name="share">Share</string>
    <string name="your_name">Your Name</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="city_information">City Information</string>
    <string name="city_name">City Name</string>
    <string name="rate">Rate</string>
    <string name="hello">Hello,</string>
    <string name="navigation">Navigation</string>
    <string name="open_navigation">Open Navigation</string>
    <string name="enter_destination_location">Enter Destination Location</string>
    <string name="enter_source_location">Enter Source Location</string>
    <string name="forget_password">Forgot Password</string>
    <string name="click_to_search_city">Click to Search City</string>
    <string name="feedback">feedback</string>
    <string name="get_weather">Get Weather</string>
    <string name="enter_your_city_name">Enter Your City Name</string>
    <string name="temperature_will_be_displayed_her">Temperature will be displayed her</string>
    <string name="hotel_rooms">Hotel Rooms</string>
    <string name="restaurants">Restaurants</string>
    <string name="famous_places">Famous Places</string>
    <string name="bus_station">Bus station</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="show_password">Show Password</string>
    <string name="your_feedback_matters">Your Feedback Matters!</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="powered_by_n_bat_software_developer">Powered by \n BAT software developer</string>
    <string name="send">Send</string>
    <string name="share_app_with_others">Share App with others</string>
</resources>