<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="Hello World!"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imageslider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:iss_auto_cycle="true"
            app:iss_corner_radius="20"
            app:iss_delay="1000"
            app:iss_period="1000"
            app:iss_title_background="@drawable/gradient" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#A368E6"
        app:cardCornerRadius="100dp"
        app:cardElevation="20dp">

        <TextView
            android:id="@+id/user_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/click_to_search_city"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/weatherback"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:hint="@string/enter_your_city_name" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="getweather"
                android:text="@string/get_weather"
                tools:ignore="OnClick" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_navigation"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/baseline_navigation_24"
            android:text="@string/navigation" />

        <ImageButton
            android:id="@+id/btn_map"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/baseline_map_24"
            android:text="@string/logout"
            android:weightSum="100" />

        <ImageButton
            android:id="@+id/btn_exchange"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/baseline_currency_exchange_24"
            android:text="@string/logout"
            android:weightSum="100" />

        <ImageButton
            android:id="@+id/btn_about"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@drawable/baseline_info_24"
            android:text="@string/logout"
            android:weightSum="100" />

        <ImageButton
            android:id="@+id/btn_feedback"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/baseline_feedback_24"
            android:text="@string/logout"
            android:weightSum="100" />

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/baseline_logout_24"
            android:hint="@string/logout"
            android:weightSum="100" />


    </LinearLayout>


</LinearLayout>