<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pexels"
    tools:context=".About">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/about1"
            android:layout_marginStart="20sp"
            android:background="@drawable/nav_about"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Application Name"
            android:id="@+id/about2"
            android:layout_marginStart="100sp"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/about3"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/app_name"
            android:layout_marginStart="100sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/lightblack"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20sp"
            android:background="@drawable/baseline_email_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Contact Us"
            android:layout_marginStart="100sp"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="bharat.dhiman11@gmail.com"
            android:layout_marginStart="100sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/lightblack"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp">
        <ImageView
            android:id="@+id/rate1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20sp"
            android:background="@drawable/baseline_star_rate_24"/>
        <TextView
            android:id="@+id/rate2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Rate us"
            android:layout_marginStart="100sp"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/rate3"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="Give your Feedback"
            android:layout_marginStart="100sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/lightblack"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp">
        <ImageView
            android:id="@+id/share1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20sp"
            android:background="@drawable/baseline_share_24"/>
        <TextView
            android:id="@+id/share2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/share"
            android:layout_marginStart="100sp"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/share3"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/share_app_with_others"
            android:layout_marginStart="100sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/lightblack"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_n_bat_software_developer"
        android:textColor="@color/white"
        android:layout_marginTop="250dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"/>

</LinearLayout>